# vcoeur.com

./: .env.example  .gcloudignore  .gitignore  .gitlab-ci.yml  Dockerfile  Procfile  README.md  app.example.yaml  app.yaml  build-css.sh  cloudbuild.yaml  collectstatic.sh  compilemessages.sh  deploy-app-engine.sh  deploy-app.sh  deploy-test.sh  deploy-vcoeur.sh  dispatch.example.yaml  dispatch.yaml  make-css.sh  makemessages.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt  runserver.sh  start-dev.sh  start.sh
css/: custom.scss  style.css.map
files/: custom.scss  style.css  style.css.map
locale/fr/LC_MESSAGES/: django.po
static/: style.css  style.css.map
vcoeur/: __init__.py  articles.py  jinja2.py  settings.py  urls.py  views.py  wsgi.py
vcoeur/jinja2/: _base.html  blog.html  contact.html  home.html  index.html  legal.html  robots.txt  services.html
vcoeur/jinja2/blog/: agile-of-course.html  good-user-story.html  low-cost-django-google.html
vcoeur/jinja2/blog/articles/: _base.html  agile-of-course.html  good-user-story.html  low-cost-django-google.html
