[tool.poetry]
name = "vcoeur"
version = "0.1.0"
description = ""
authors = ["Alice Voland <alice@vcoeur.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
environs = "^10.3.0"
psycopg = "^3.1.17"
requests = "^2.31.0"
pytz = "^2023.3.post1"
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
django-test = "^0.4030"
django-stubs = "^4.2.7"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
